--- a/scopes/design/ui/elements/level-icon/level-icon.docs.mdx
+++ b/scopes/design/ui/elements/level-icon/level-icon.docs.mdx
@@ -1,24 +1,26 @@
 ---
-description: 'An Icon component that shows different icons based on the level passed to it'
+description: 'An Icon component that shows different alert icons based on the level passed to it'
 labels: ['warning', 'success', 'error', 'info']
 ---
 
 import { LevelIcon } from './level-icon';
 
-Icon Component with various levels:
+## Icon Component with various alert levels
 
 - info
 - warning
 - success
 - error
 
-Component usage:
+### Component usage
 
 ```js
 <LevelIcon level="info" />
 ```
 
-Modify the level to see the icon change:
+### Using props to change the icon
+
+Modify the alert level of icon to see the icon change:
 
 ```js live
 <LevelIcon level="info" />
