--- a/scopes/design/ui/separator/separator.docs.mdx
+++ b/scopes/design/ui/separator/separator.docs.mdx
@@ -2,9 +2,11 @@
 description: Presentational separator to separate content in non semantic way
 ---
 
-Horizontal line separator for presentational usage and not semantic usage.
+## Horizontal line separator
 
-Basic Component Usage:
+This uses a `<div>` with a border to give a horizontal line and is therefore meant for presentational usage and not semantic usage.
+
+### Component Usage
 
 ```js
 <Separator />
