feat: add video to exporting components page

--- a/scopes/component/instructions/exporting-components/exporting-components.mdx
+++ b/scopes/component/instructions/exporting-components/exporting-components.mdx
@@ -1,5 +1,15 @@
 ## How to Version and Export Components
 
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/7aupBUi3m6I?rel=0"
+  title="Exporting and Versioning Components"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
+
 > To export your components to the cloud so that they can be installed elsewhere you first have to tag and then export your components.
 
 When we version or 'tag' a component, we commit changes and prepare it to be exported to a remote scope. This process most often includes compiling and testing, as well.
