fix: add import todocs

--- a/scopes/design/ui/elements/level-icon/level-icon.docs.mdx
+++ b/scopes/design/ui/elements/level-icon/level-icon.docs.mdx
@@ -15,7 +15,11 @@ import { LevelIcon } from './level-icon';
 ### Component usage
 
 ```js
+import { LevelIcon } from '@teambit/ui.elements.level-icon';
+
+...
 <LevelIcon level="info" />
+...
 ```
 
 ### Using props to change the icon
