--- a/scopes/compilation/aspect-docs/babel/babel.mdx
+++ b/scopes/compilation/aspect-docs/babel/babel.mdx
@@ -1,21 +1,14 @@
----
-id: babel
-title: Babel Compiler
-slug: /aspects/babel
-description: Babel compilation for Bit components
-labels: ['babel', 'compiler', 'bit', 'extension', 'aspect']
----
-
 This compiler utilizes the programmatic API of Babel to transpile files. See the compiler-options.ts for more data how to pass Babel options to the compiler.
 
 Note that to isolate the components from different Babel config files on the machine, the following two props are set to false (if they weren't passed in the options): `configFile` and `babelrc`.
 
 ## FAQ
 
-*Q*: I'm getting an error about missing plugins.
+_Q_: I'm getting an error about missing plugins.
 
-*A*: make sure that workspace.jsonc has the plugins and that you ran `bit install`.
+_A_: make sure that workspace.jsonc has the plugins and that you ran `bit install`.
 Example of the workspace.jsonc settings:
+
 ```
 "my-babel-env": {
       "teambit.bit/aspect": {},
@@ -32,8 +25,10 @@ Example of the workspace.jsonc settings:
       }
     },
 ```
+
 2. You're not using the plugin.
-The reason for the error is that Babel searches for config files in different directories. To disable this, add the following to the config you pass to the compiler:
+   The reason for the error is that Babel searches for config files in different directories. To disable this, add the following to the config you pass to the compiler:
+
 ```
 {
   ...
@@ -41,4 +36,5 @@ The reason for the error is that Babel searches for config files in different di
   "configFile": false,
 }
 ```
+
 this takes care of both .babelrc and babel.config.json.
