--- a/scopes/compilation/aspect-docs/babel/babel.docs.mdx
+++ b/scopes/compilation/aspect-docs/babel/babel.docs.mdx
@@ -1,6 +1,6 @@
 ---
 description: 'Docs for Babel Aspect'
-labels: ['docs', 'aspects', 'extensions']
+labels: ['docs', 'aspect', 'extensions']
 ---
 
 import { Babel } from './index';
