feat: add aspect docs logger, envs, compositons

--- a/scopes/compilation/aspect-docs/multi-compiler/multi-compiler.mdx
+++ b/scopes/compilation/aspect-docs/multi-compiler/multi-compiler.mdx
@@ -1,11 +1,3 @@
----
-id: multi-compiler
-title: Multi-compiler
-slug: /aspects/multi-compiler
-description: The multi-compiler aspect allows the configuration of multiple compilers on a component
-labels: ['multi-compiler', 'compiler', 'envs', 'compiler', 'bit', 'extension', 'aspect']
----
-
 The multi-compiler aspect allows the configuration of multiple compilers on a component. This determines which compiler to apply on a component file using the `isFileSupported()` compiler API.
 
 - `createCompiler(compilers: Compiler[], options: CompilerOptions)` API to support the creation a Multi-compiler instance which can be used in the Env API (the `overrideCompiler` and `getCompiler` APIs).
@@ -13,10 +5,7 @@ The multi-compiler aspect allows the configuration of multiple compilers on a co
 
 ```ts
 // create a multi compiler instance.
-const compiler = multiCompiler.createCompiler([
-  createBabelCompiler(),
-  createTsCompiler()
-]);
+const compiler = multiCompiler.createCompiler([createBabelCompiler(), createTsCompiler()]);
 
 // create a multi-compiler build task.
 compiler.createTask('MultiCompiler', compiler);
