fix: minor fixes

--- a/scopes/compilation/aspect-docs/multi-compiler/multi-compiler.docs.mdx
+++ b/scopes/compilation/aspect-docs/multi-compiler/multi-compiler.docs.mdx
@@ -14,7 +14,7 @@ Docs for MultiCompiler aspect
 Use your component in any mdx file:
 
 ```js
-import { MultiCompiler } from '@teambit/aspect-docs.multicompiler';
+import { MultiCompiler } from '@teambit/aspect-docs.multi-compiler';
 
 <MultiCompiler />;
 ```
@@ -24,7 +24,7 @@ import { MultiCompiler } from '@teambit/aspect-docs.multicompiler';
 ```js
 import { ThemeContext } from '@teambit/documenter.theme.theme-context';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
-import { MultiCompiler } from '@teambit/aspect-docs.multicompiler';
+import { MultiCompiler } from '@teambit/aspect-docs.multi-compiler';
 
 <ThemeContext>
   <MDXLayout>
