--- a/scopes/react/aspect-docs/react-native/react-native.docs.mdx
+++ b/scopes/react/aspect-docs/react-native/react-native.docs.mdx
@@ -14,7 +14,7 @@ Docs for ReactNative aspect
 Use your component in any MDX file:
 
 ```js
-import { ReactNative } from '@teambit/aspect-docs.reactnative';
+import { ReactNative } from '@teambit/aspect-docs.react-native';
 
 <ReactNative />;
 ```
@@ -24,7 +24,7 @@ import { ReactNative } from '@teambit/aspect-docs.reactnative';
 ```js
 import { ThemeContext } from '@teambit/documenter.theme.theme-context';
 import { MDXNativeLayout } from '@teambit/ui.mdx-layout';
-import { ReactNative } from '@teambit/aspect-docs.reactnative';
+import { ReactNative } from '@teambit/aspect-docs.react-native';
 
 <ThemeContext>
   <MDXNativeLayout>
