--- a/scopes/react/react/react.docs.mdx
+++ b/scopes/react/react/react.docs.mdx
@@ -3,6 +3,6 @@ description: A Bit development environment for React Components
 labels: ['react', 'environment', 'env', 'aspect', 'extension']
 ---
 
-import { React } from '@teambit/aspect-docs.React';
+import { ReactAspect } from '@teambit/aspect-docs.react';
 
-<React />
+<ReactAspect />
