updated all components in design scope

--- a/scopes/design/ui/alert-card/alert-card.docs.mdx
+++ b/scopes/design/ui/alert-card/alert-card.docs.mdx
@@ -19,7 +19,7 @@ Card shows an alert icon and title in the heading and renders any content in the
 ### Component usage
 
 ```js
-import { AlertCard } from '@teambit/ui.alert-card';
+import { AlertCard } from '@teambit/design.ui.alert-card';
 
 ...
 <AlertCard level="info" title="Info message" titleSize="xxs">
