--- a/scopes/design/ui/elements/level-icon/level-icon.docs.mdx
+++ b/scopes/design/ui/elements/level-icon/level-icon.docs.mdx
@@ -15,7 +15,7 @@ import { LevelIcon } from './level-icon';
 ### Component usage
 
 ```js
-import { LevelIcon } from '@teambit/ui.elements.level-icon';
+import { LevelIcon } from '@teambit/design.ui.elements.level-icon';
 
 ...
 <LevelIcon level="info" />
