--- a/scopes/design/ui/separator/separator.docs.mdx
+++ b/scopes/design/ui/separator/separator.docs.mdx
@@ -12,7 +12,7 @@ Separator component uses a `<hr>` to give a semantic separator. When the isPrese
 ### Component Usage for Semantic separator
 
 ```js
-import { Separator } from '@teambit/ui.separator';
+import { Separator } from '@teambit/design.ui.separator';
 
 ...
 <Separator />
@@ -22,7 +22,7 @@ import { Separator } from '@teambit/ui.separator';
 ### Component Usage for Presentational separator
 
 ```js
-import { Separator } from '@teambit/ui.separator';
+import { Separator } from '@teambit/design.ui.separator';
 
 ...
 <Separator isPresentational />
