rename imports for scope React

--- a/scopes/react/aspect-docs/react/react.docs.mdx
+++ b/scopes/react/aspect-docs/react/react.docs.mdx
@@ -14,7 +14,7 @@ Docs for React aspect
 Use your component in any MDX file:
 
 ```js
-import { ReactAspect } from '@teambit/aspect-docs.react';
+import { ReactAspect } from '@teambit/react.aspect-docs.react';
 
 <ReactAspect />;
 ```
@@ -24,7 +24,7 @@ import { ReactAspect } from '@teambit/aspect-docs.react';
 ```js
 import { ThemeContext } from '@teambit/documenter.theme.theme-context';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
-import { ReactAspect } from '@teambit/aspect-docs.react';
+import { ReactAspect } from '@teambit/react.aspect-docs.react';
 
 <ThemeContext>
   <MDXLayout>
