--- a/scopes/react/react-native/react-native.docs.mdx
+++ b/scopes/react/react-native/react-native.docs.mdx
@@ -3,6 +3,6 @@ description: A Bit development environment for React Native Components
 labels: ['react-native', 'environment', 'env', 'aspect', 'extension']
 ---
 
-import { ReactNative } from '@teambit/aspect-docs.react-native';
+import { ReactNative } from '@teambit/react.aspect-docs.react-native';
 
 <ReactNative />
