--- a/scopes/react/react/react.docs.mdx
+++ b/scopes/react/react/react.docs.mdx
@@ -3,6 +3,6 @@ description: A Bit development environment for React Components
 labels: ['react', 'environment', 'env', 'aspect', 'extension']
 ---
 
-import { ReactAspect } from '@teambit/aspect-docs.react';
+import { ReactAspect } from '@teambit/react.aspect-docs.react';
 
 <ReactAspect />
